# wasm-bindgen-demo

./: .gitignore  LICENSE  README.md
nodejs/: package-lock.json  package.json
nodejs/src/: deserialized.ts  isWasmPanic.ts  typed.ts
nodejs/src/wasm/: get_config_wasm.d.ts  get_config_wasm.js  get_config_wasm_bg.wasm  get_config_wasm_bg.wasm.d.ts
rust/: Cargo.toml  build.sh
rust/get-config/: Cargo.toml
rust/get-config-wasm/: Cargo.toml
rust/get-config-wasm/src/: lib.rs
rust/get-config/src/: lib.rs
