[package]
name = "get-config-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Schiabel <schiabel@prisma.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# build a C-style shared library that can be dynamically loaded by Node.js
crate-type = ["cdylib"]
name = "get_config_wasm"

[dependencies]
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
get-config = { path = "../get-config", features = ["wasm"] }
serde-wasm-bindgen = "0.4.3"
serde_json = { version = "1.0.85" }
serde = "1.0.144"
